# tools

./: .gitmodules
hid-desc/: uxb360gp_rdesc.h
isd2100/: Descriptors.c  Descriptors.h  Makefile  README  README.md  isd2100.c  isd2100.h  isd2100.py  main.c  main.h
isd2100/Config/: LUFAConfig.h
lflash/: Makefile
lflash/debian/: changelog  control  copyright
picflash/: Flasher.c  PICFLASH.mcp  XNAND.c  XNAND.err
pirstool/: Makefile  mytypes.h  pirstool.c
pirstools/: AUTHORS  CREDITS  ChangeLog  autogen.sh  configure.ac
pirstools/src/: Makefile.am  test.sh  util.c  util.h
pirstools/src/lib/: Makefile.am  util.c  util.h
reset_glitch_hack/: build.py
shahunt/: AUTHORS  BUILD  CREDITS  ChangeLog  Makefile  README  shahunt  shahunt.c
xboxdumper/: Makefile  README.TXT  fatx.c  fatx.h  file64.c  file64.h  main.c  mytypes.h  util.c  util.h  utility.c  utility.h
xextools/: .NOTES.swp  ChangeLog  config.h.in  configure.ac  libtool
xextools/src/: Makefile.am  swissknife.c  swissknife.h  xex_display.c  xex_display.h  xexread.c
xextools/src/lib/: Makefile.am  libxex.h  main.h  swissknife.c  swissknife.h  xex_alloc.c  xex_alloc.h  xex_cert.c  xex_cert.h  xex_datatypes.h  xex_main.c  xex_main.h  xh_info.c  xh_info.h  xh_info_exec.c  xh_info_exec.h  xh_info_init.c  xh_info_init.h  xh_info_load.c  xh_info_load.h  xh_info_unknown_1.c  xh_info_unknown_1.h  xh_main.c  xh_main.h
xflash/: README
