lib_LTLIBRARIES = libpirs.la

libpirs_la_SOURCES =  \
	pirs_alloc.c		\
	pirs_alloc.h		\
	pirs_hashtables.c	\
	pirs_hashtables.h	\
	pirs_filetable.c	\
	pirs_filetable.h	\
	pirs_datatypes.h	\
	pirs_main.c		\
	pirs_main.h		\
	pirs_titles.c		\
	pirs_titles.h		\
	pirs_desc.c		\
	pirs_desc.h		\
	pirs_extract.c		\
	pirs_extract.h		\
	util.c			\
	util.h			\
	libpirs.h		\
	sha1.c			\
	sha1.h


libpirs_la_LDFLAGS = -version-info 0:1:0

all: libpirs.la
	@echo Done.
