lib_LTLIBRARIES = libxex.la

libxex_la_SOURCES =  \
        swissknife.c            \
        xh_info.c               \
        xh_info_exec.c          \
        xh_info_init.c          \
        xh_info_load.c          \
        xh_info_unknown_1.c     \
        xh_main.c               \
        xex_cert.c              \
        xex_main.c              \
        xex_alloc.c		\
	libxex.h		\
	swissknife.h		\
	xex_cert.h		\
	xex_main.h		\
	xh_info_exec.h		\
	xh_info_load.h		\
	xh_main.h		\
	xex_alloc.h		\
	xex_datatypes.h		\
	xh_info.h		\
	xh_info_init.h		\
	xh_info_unknown_1.h


libxex_la_LDFLAGS = -version-info 0:1:0

all: libxex.la
	@echo Done.
